--- a/css/style.css
+++ b/css/style.css
@@ -86,7 +86,7 @@ body {
 }
 
 /* Enable scrolling on mobile */
-@media (max-width: 768px) {
+/* @media (max-width: 768px) {
   html, body {
     height: auto;
     overflow-y: scroll;
@@ -96,7 +96,7 @@ body {
   body {
     position: relative;
   }
-}
+} */
 body {
   font-family: "Roboto", "Arial", -apple-system, BlinkMacSystemFont, "Segoe UI",
     sans-serif;
